--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .expenseTracker {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
   height: 100vh;
   width: 90vw;
@@ -9,23 +10,32 @@
 
 .expenceTracker__main {
     width: 100%;
+    height: 25%;
     display: flex;
 }
 
-.expenceTracker__speechly {
-  grid-row: 1 / span 2;
-  grid-column: 5 / span 12;
-}
 .expenceTracker__charts {
-  grid-row: 2 / span 11;
-  grid-column: 5 / span 13;
-  display: flex;
-  align-items: center;
+    display: flex;
+    height: 60%;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .expenceTracker__income {
-  width: 50%;
+    width: 35%;
+    height: 75%;
 }
-.expenceTracker__expense {
-  width: 50%;
+
+.expenceTracker__expence {
+    width: 35%;
+    height: 75%;
+}
+
+.expenceTracker__list {
+    width: 25%;
+    background-color: white;
+    height: 75%;
+    border-radius: 10px;
+    
 }
