--- a/src/components/details/Details.css
+++ b/src/components/details/Details.css
@@ -1,15 +1,45 @@
 .chartContainer {
-    padding: 1rem;
+
     background-color: #fff;
     border-radius: 10px;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content:center;    
+}
+
+.chartContainer__header {
+    padding: 1rem 0 0.5rem 0;
+    width: 100%;
+    background-color: whitesmoke;
+    border-radius: 10px 10px 0 0;
+
+}
+
+.chartContainer__chartSection {
+    width: 100%;
+    display:flex;
     justify-content:center;
-    width: 80%;
+    align-items: center;
+}
+
+.chartContainer__chart {
+   padding: 1rem;
+    Width: 50%;
+}
+
+.chartContainer__income {
+    color: green;
+    padding-left: 1rem;
+    display: flex;
+    align-items: center;
     
 }
 
-
-.chartContainer__chart {
-    Width: 100%;
+.chartContainer__expense {
+    color: red;
+    padding-right: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
