--- a/src/components/main/form/From.css
+++ b/src/components/main/form/From.css
@@ -3,6 +3,8 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    background-color: whitesmoke;
+    border-radius: 10px;
  
 }
 
