--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,36 @@
 .expenseTracker {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 100vh;
-  width: 90vw;
-  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(12, 1fr);
+  height: 98vh;
+  width: 98vw;
+  padding: 1vh 1vw;
+  /* overflow: scroll; */
 }
 
-.expenceTracker__main {
-    width: 100%;
-    height: 25%;
-    display: flex;
+.expenceTracker__main { 
+    grid-column: 1/span 12;
+    grid-row: 1 /span 4;
 }
+
+.expenceTracker__list {
+    grid-column: 1/ span 4;
+    grid-row: 5/ span 8;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border-radius: 10px;
+    
+}
+
+
 
 .expenceTracker__charts {
     display: flex;
     height: 60%;
     width: 100%;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .expenceTracker__income {
@@ -32,10 +43,3 @@
     height: 75%;
 }
 
-.expenceTracker__list {
-    width: 25%;
-    background-color: white;
-    height: 75%;
-    border-radius: 10px;
-    
-}
