--- a/src/components/details/Details.css
+++ b/src/components/details/Details.css
@@ -1,5 +1,4 @@
 .chartContainer {
-
     background-color: #fff;
     border-radius: 10px;
     display: flex;
@@ -18,6 +17,7 @@
 
 .chartContainer__chartSection {
     width: 100%;
+    height: 100%;
     display:flex;
     justify-content:center;
     align-items: center;
@@ -25,7 +25,7 @@
 
 .chartContainer__chart {
    padding: 1rem;
-    Width: 50%;
+    Width: 75%;
 }
 
 .chartContainer__income {
