--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,13 @@
 .expenseTracker {
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(12, 1fr);
-  height: 98vh;
-  width: 98vw;
-  padding: 1vh 1vw;
+  place-items: center;
+  height: 100vh;
+  width: 100vw;
   /* overflow: scroll; */
 }
 
-.expenceTracker__main { 
-    grid-column: 1/span 12;
-    grid-row: 1 /span 4;
-}
-
 .expenceTracker__list {
-    grid-column: 1/ span 4;
+    grid-column: 2/ span 4;
     grid-row: 5/ span 8;
     width: 100%;
     height: 100%;
@@ -42,4 +35,3 @@
     width: 35%;
     height: 75%;
 }
-
