--- a/src/components/details/Details.css
+++ b/src/components/details/Details.css
@@ -1,6 +1,7 @@
 .chartContainer {
     background-color: #fff;
     border-radius: 10px;
+    width: 375px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -30,9 +31,11 @@
 
 .chartContainer__income {
     color: green;
-    padding-left: 1rem;
+    padding-right: 1rem;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
+
     
 }
 
