--- a/src/components/main/form/From.css
+++ b/src/components/main/form/From.css
@@ -1,18 +1,40 @@
-.from {
+.form {
     width: 100%;
+    height: 8rem;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     background-color: whitesmoke;
-    border-radius: 10px;
+    margin-bottom: 2rem;
+   
  
 }
 
-.from__group {
+.form__group {
     width: 90%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding: 1rem;
+    margin: 0 1rem;
+    border-radius: 5px;
 
 }
 
+.form__formControl {
+
+}
+
+@media screen and (max-width: 768px) {
+
+    .form {
+        flex-direction: column;
+        justify-content: flex-start;
+        height: 25rem;
+        
+    }
+
+    .form__group {
+        flex-direction: column;
+    } 
+}
