--- a/src/components/main/list/List.css
+++ b/src/components/main/list/List.css
@@ -1,3 +1,7 @@
+.list {
+    width: 300px;
+}
+
 .list__header {
     padding: 1rem 0 0.5rem 0;
     width: 100%;
@@ -27,3 +31,10 @@
 .list__headerTitle {
     padding-left: 1rem;
 }
+
+@media screen and (max-width: 1382px) {
+    .list {
+        width: 100%;
+    }
+    
+  }
