--- a/src/components/speechlyCard/SpeechlyCard.css
+++ b/src/components/speechlyCard/SpeechlyCard.css
@@ -1,5 +1,5 @@
 .speechlyCard {
-    height: 100%;
+    height: 7rem;
     margin: 1rem;
     display: flex;
     justify-content: space-between;
@@ -7,8 +7,13 @@
 }
 
 .speechlyCard__cardHeader { 
-    height: 7rem;
+    height: 5rem;
     width: 15rem;
+
+}
+
+.speechlyCard__buttonMobile {
+    display: none;
 }
 
 
@@ -21,13 +26,14 @@
     display: flex; 
     align-items: center;
     justify-content: space-between;
-    width: 15rem;
+    width: 16rem;
 }
 
 .speechlyCard__trySaying {
     color: gray;
     font-style: italic;
     text-align: center;
+    width: 75%;
 
 }
 
@@ -68,4 +74,34 @@ button span .MuiSvgIcon-root {
         order: 3;
     }
 }
+
+@media screen and (max-width: 557px) {
+    .speechlyCard {
+        height: 11rem;
+        margin: 0;
+        justify-content: center;
+    }
+    .speechlyCard__cardHeader { 
+        height: 5rem;
+        width: 95%;
+        display: flex;
+        justify-content:space-between;
+        align-items: center;
+    }
+    .speechlyCard__buttonMobile {
+        display: block;
+    }
+    .speechlyCard__buttonDesktop {
+        display: none;
+    }
+
+    .speechlyCard__trySaying {
+        width: 100%;
+    
+    }
+
+    
+}
+
+
     
