--- a/src/components/speechlyCard/SpeechlyCard.css
+++ b/src/components/speechlyCard/SpeechlyCard.css
@@ -77,7 +77,7 @@ button span .MuiSvgIcon-root {
 
 @media screen and (max-width: 557px) {
     .speechlyCard {
-        height: 11rem;
+        height: 8rem;
         margin: 0;
         justify-content: center;
     }
@@ -88,19 +88,19 @@ button span .MuiSvgIcon-root {
         justify-content:space-between;
         align-items: center;
     }
-    .speechlyCard__buttonMobile {
-        display: block;
-    }
     .speechlyCard__buttonDesktop {
         display: none;
     }
 
     .speechlyCard__trySaying {
-        width: 100%;
+        display: none;
     
     }
 
+    .speechlyCard__voiceText {
+        display: none;
     
+    }
 }
 
 
