--- a/src/components/details/Details.css
+++ b/src/components/details/Details.css
@@ -6,6 +6,8 @@
     flex-direction: column;
     align-items: center;
     justify-content:center;    
+    border: 2px solid whitesmoke;
+    box-shadow: 0px 0px 10px whitesmoke;
 }
 
 .chartContainer__header {
