--- a/src/components/details/Details.css
+++ b/src/components/details/Details.css
@@ -8,6 +8,7 @@
     justify-content:center;    
     border: 2px solid whitesmoke;
     box-shadow: 0px 0px 10px whitesmoke;
+    margin-top: 1rem;
 }
 
 .chartContainer__header {
